--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,8 @@
     "routes" : [
         {
             "src": "/(.*)",
-            "dest" : "index.py"
+            "dest" : "index.py",
+            "methods" :["GET","POST","PUT","PATCH","DELETE","OPTIONS"]
         }
     ],
     "env" : {
